--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.1",
     "markdown-it": "^12.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
