--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/shythm/zetin-competition#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.3"
+    "jimp": "^0.16.1",
+    "mime-types": "^2.1.31",
+    "mongoose": "^5.13.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
