--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jimp": "^0.16.1",
     "mime-types": "^2.1.31",
     "mongoose": "^5.13.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sharp": "^0.28.3"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
