--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.1",
     "markdown-it": "^12.0.6",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
