--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.2",
+    "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.31",
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
