--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/shythm/zetin-competition#readme",
   "dependencies": {
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.2",
