--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.9",
-    "http-proxy-middleware": "^2.0.1",
     "markdown-it": "^12.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -47,5 +46,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "./"
+  "homepage": "./",
+  "proxy": "http://localhost:8000"
 }
