--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "bs-custom-file-input": "^1.3.4",
     "formik": "^2.2.9",
     "markdown-it": "^12.0.6",
     "moment": "^2.29.1",
