--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "bs-custom-file-input": "^1.3.4",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.6",
     "markdown-it": "^12.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -47,6 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "./",
-  "proxy": "http://localhost:8000"
+  "homepage": "./"
 }
