--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
   },
   "homepage": "https://github.com/shythm/zetin-competition#readme",
   "dependencies": {
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mime-types": "^2.1.31",
-    "mongoose": "^5.13.3",
-    "multer": "^1.4.2",
-    "sharp": "^0.28.3"
+    "mime-types": "^2.1.35",
+    "mongoose": "^6.3.6",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
-    "concurrently": "^6.2.0",
-    "nodemon": "^2.0.12"
+    "concurrently": "^7.2.1",
+    "nodemon": "^2.0.16"
   }
 }
