--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mime-types": "^2.1.35",
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
+    "objects-to-csv": "^1.3.6",
     "sharp": "^0.30.6"
   },
   "devDependencies": {
