--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.5",
     "mime-types": "^2.1.35",
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
