--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.5",
     "mime-types": "^2.1.35",
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
-    "objects-to-csv": "^1.3.6",
-    "sharp": "^0.30.6"
+    "objects-to-csv": "^1.3.6"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
