--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "zetin-competition-frontend-new",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -51,5 +51,6 @@
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "homepage": "/"
 }
