--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/shythm/zetin-competition#readme",
   "dependencies": {
+    "@uiw/react-md-editor": "^4.0.4",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -32,7 +33,9 @@
     "mime-types": "^2.1.35",
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
-    "objects-to-csv": "^1.3.6"
+    "objects-to-csv": "^1.3.6",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
