--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,13 @@
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
     "http-proxy-middleware": "^2.0.6",
-    "markdown-it": "^14.0.0",
-    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
