--- a/package.json
+++ b/package.json
@@ -33,10 +33,7 @@
     "mime-types": "^2.1.35",
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
-    "objects-to-csv": "^1.3.6",
-    "react-hook-form": "^7.51.1",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0"
+    "objects-to-csv": "^1.3.6"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
