--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Initial README.md",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
