--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.18.89",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-flatpickr": "^3.8.11",
     "@types/react-modal": "^3.16.3",
     "axios": "^1.6.8",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.51.1",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
