--- a/server/package.json
+++ b/server/package.json
@@ -13,16 +13,19 @@
     "dotenv": "^16.4.5",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
+    "koa-logger": "^3.2.1",
     "koa-router": "^12.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-logger": "^3.1.5",
     "@types/koa-router": "^7.4.8",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.0"
   }
 }
