--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,24 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
+    "koa-cookie": "^1.0.0",
     "koa-logger": "^3.2.1",
-    "koa-router": "^12.0.1"
+    "koa-router": "^12.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jwk-to-pem": "^2.0.3",
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-cookie": "^1.0.3",
     "@types/koa-logger": "^3.1.5",
     "@types/koa-router": "^7.4.8",
     "eslint": "^8.57.0",
